--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ julia:
     - 0.4
     - 0.5
     - nightly
+matrix:
+  allow_failures:
+    - julia: nightly 
 notifications:
     email: false
 script:
