--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os:
     - osx
     - linux
 julia:
-    - 0.7
+    - 1.0
     - nightly
 matrix:
   allow_failures:
@@ -12,6 +12,6 @@ notifications:
     email: false
 script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-    - julia -e 'Pkg.clone(pwd()); Pkg.build("LibGEOS"); Pkg.test("LibGEOS"; coverage=true)'
+    - julia -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("LibGEOS"); Pkg.test("LibGEOS"; coverage=true)'
 after_success:
-    - julia -e 'cd(Pkg.dir("LibGEOS")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder()); Codecov.submit(Codecov.process_folder())';
+    - julia -e 'using Pkg; cd(Pkg.dir("LibGEOS")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder()); Codecov.submit(Codecov.process_folder())';
