--- a/Project.toml
+++ b/Project.toml
@@ -12,3 +12,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 BinaryProvider = "≥ 0.5.3"
 GeoInterface = "≥ 0.4.0"
 julia = "≥ 0.7.0"
+CEnum = "≥ 0.2.0"
