--- a/Project.toml
+++ b/Project.toml
@@ -3,14 +3,13 @@ uuid = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
 version = "0.5.1"
 
 [deps]
-BinaryProvider = "b99e7846-7c00-51b0-8f62-c81ae34c0232"
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
+GEOS_jll = "d604d12d-fa86-5845-992e-78dc15976526"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-BinaryProvider = "0.5.3"
 CEnum = "0.2.0"
 GeoInterface = "0.4.0"
 julia = "1.0.0"
