--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "LibGEOS"
 uuid = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
-version = "0.5.0"
+version = "0.5.1"
 
 [deps]
 BinaryProvider = "b99e7846-7c00-51b0-8f62-c81ae34c0232"
@@ -10,7 +10,7 @@ Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-BinaryProvider = "≥ 0.5.3"
-CEnum = "≥ 0.2.0"
-GeoInterface = "≥ 0.4.0"
-julia = "≥ 1.0.0"
+BinaryProvider = "0.5.3"
+CEnum = "0.2.0"
+GeoInterface = "0.4.0"
+julia = "1.0.0"
