--- a/Project.toml
+++ b/Project.toml
@@ -11,5 +11,6 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 CEnum = "0.2.0"
+GEOS_jll = "3.8.0"
 GeoInterface = "0.4.0"
 julia = "1.3.0"
