--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,7 @@
 name = "LibGEOS"
 uuid = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
-version = "0.6.0"
+license = "MIT"
+version = "0.6.1"
 
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
@@ -9,10 +10,10 @@ GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 
 [compat]
-CEnum = "0.2.0"
-GEOS_jll = "3.8.0"
-GeoInterface = "0.4.0, 0.5"
-julia = "1.3.0"
+CEnum = "0.2"
+GEOS_jll = "3.8"
+GeoInterface = "0.4, 0.5"
+julia = "1.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
