--- a/Project.toml
+++ b/Project.toml
@@ -6,12 +6,11 @@ version = "0.6.5"
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
 GEOS_jll = "d604d12d-fa86-5845-992e-78dc15976526"
-GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
+GeoInterfaceRFC = "092d6370-f8e6-11e9-0b9b-bbd6df571de9"
 
 [compat]
 CEnum = "0.2, 0.3, 0.4"
 GEOS_jll = "3.8"
-GeoInterface = "0.4, 0.5"
 julia = "1.3"
 
 [extras]
