codegen use_ccall_macro
Which is easier to read and more compact. Also in line with GDAL and PROJ wrappers.

--- a/gen/generator.toml
+++ b/gen/generator.toml
@@ -10,9 +10,9 @@ smart_de_anonymize = true
 printer_blacklist = [
 ]
 [codegen]
+use_ccall_macro = true
 use_julia_bool = true
 always_NUL_terminated_string = true
 is_function_strictly_typed = false
 opaque_func_arg_as_PtrCvoid = false
 opaque_as_mutable_struct = false
-use_ccall_macro = false
