--- a/Project.toml
+++ b/Project.toml
@@ -8,14 +8,14 @@ CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
 GEOS_jll = "d604d12d-fa86-5845-992e-78dc15976526"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
 [compat]
-julia = "1.6"
 CEnum = "0.2, 0.3, 0.4"
 GEOS_jll = "3.9"
-GeoInterface = "0.4, 0.5"
+GeoInterface = "0.4, 0.5, 1"
+julia = "1.6"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
