--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "LibGEOS"
 uuid = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
 license = "MIT"
-version = "0.6.12"
+version = "0.7.0"
 
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
@@ -15,7 +15,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 julia = "1.6"
 CEnum = "0.2, 0.3, 0.4"
 GEOS_jll = "3.10"
-GeoInterface = "0.4, 0.5"
+GeoInterface = "1"
 
 [targets]
 test = ["Test"]
