--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 GeoInterfaceRecipes = "0329782f-3d07-4b52-b9f6-d3137cf03c7a"
 
 [compat]
-CEnum = "0.2, 0.3, 0.4"
+CEnum = "0.2, 0.3, 0.4, 0.5"
 Extents = "0.1.1"
 GEOS_jll = "3.12"
 GeoInterface = "1"
