better extension name

--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 
 [extensions]
-LibGEOSMakie = "Makie"
+LibGEOSMakieExt = "Makie"
 
 [compat]
 Aqua = "0.8"
