--- a/Project.toml
+++ b/Project.toml
@@ -16,12 +16,14 @@ Extents = "0.1.1"
 GEOS_jll = "3.12"
 GeoInterface = "1"
 GeoInterfaceRecipes = "1"
+RecipesBase = "1"
 julia = "1.6"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Aqua", "Plots", "Test"]
+test = ["Aqua", "Plots", "RecipesBase", "Test"]
