Allow Makie v0.21 in Project.toml

--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ GEOS_jll = "3.12"
 GeoInterface = "1"
 GeoInterfaceMakie = "0.1"
 GeoInterfaceRecipes = "1"
-Makie = "0.20"
+Makie = "0.20, 0.21"
 Plots = "1"
 RecipesBase = "1"
 Test = "<0.0.1,1"
