--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "LibGEOS"
 uuid = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
 license = "MIT"
-version = "0.9.0"
+version = "0.9.1"
 
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
@@ -25,7 +25,7 @@ GEOS_jll = "3.12"
 GeoInterface = "1"
 GeoInterfaceMakie = "0.1"
 GeoInterfaceRecipes = "1"
-Makie = "0.20"
+Makie = "0.20, 0.21"
 Plots = "1"
 RecipesBase = "1"
 Test = "<0.0.1,1"
