--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ GEOS_jll = "3.13"
 GeoInterface = "1"
 GeoInterfaceMakie = "0.1"
 GeoInterfaceRecipes = "1"
-Makie = "0.20, 0.21"
+Makie = "0.20, 0.21, 0.22"
 Plots = "1"
 RecipesBase = "1"
 Test = "<0.0.1,1"
