CompatHelper: bump compat for Makie in [weakdeps] to 0.24, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ GEOS_jll = "3.13"
 GeoInterface = "1"
 GeoInterfaceMakie = "0.1"
 GeoInterfaceRecipes = "1"
-Makie = "0.20, 0.21, 0.22"
+Makie = "0.20, 0.21, 0.22, 0.24"
 Plots = "1"
 RecipesBase = "1"
 Test = "<0.0.1,1"
