--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ CEnum = "0.2, 0.3, 0.4, 0.5"
 Extents = "0.1.1"
 GEOS_jll = "3.13"
 GeoInterface = "1.5"
-Makie = "0.20, 0.21, 0.22"
+Makie = "0.23, 0.24"
 Plots = "1"
 Test = "<0.0.1,1"
 julia = "1.9"
