--- a/Project.toml
+++ b/Project.toml
@@ -1,31 +1,29 @@
 name = "LibGEOS"
 uuid = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
 license = "MIT"
-version = "0.9.4"
+version = "0.9.5"
 
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
 Extents = "411431e0-e8b7-467b-b5e0-f676ba4f2910"
 GEOS_jll = "d604d12d-fa86-5845-992e-78dc15976526"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
-GeoInterfaceMakie = "0edc0954-3250-4c18-859d-ec71c1660c08"
-GeoInterfaceRecipes = "0329782f-3d07-4b52-b9f6-d3137cf03c7a"
 
 [weakdeps]
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 
 [extensions]
 LibGEOSMakieExt = "Makie"
+LibGEOSRecipesBaseExt = "RecipesBase"
 
 [compat]
 Aqua = "0.8"
 CEnum = "0.2, 0.3, 0.4, 0.5"
 Extents = "0.1.1"
 GEOS_jll = "3.13"
-GeoInterface = "1"
-GeoInterfaceMakie = "0.1"
-GeoInterfaceRecipes = "1"
-Makie = "0.20, 0.21, 0.22"
+GeoInterface = "1.5"
+Makie = "0.23, 0.24"
 Plots = "1"
 RecipesBase = "1"
 Test = "<0.0.1,1"
@@ -35,7 +33,6 @@ julia = "1.9"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
